# xtor

./: .gitignore  README.md  pyproject.toml  t.py
.github/: linux.yml
.github/workflows/: linux.yml  test.yml  windows.yml
docs/: README.md  __init__.md  tor.md  utils.md  xtor.md
xtor/: __init__.py  cli.py  tor.py  utils.py
